book_info/perf_testing/routingRules/virtual-service-req-to-details.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage
spec:
  hosts:
    - productpage
  gateways:
    - bookinfo-gateway
  http:
    - route:
        - destination:
            host: details
            subset: v1
            port:
              number: 9080
